--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -104,6 +104,57 @@
   &__logo {
     padding: 15px 0;
   }
+
+  &__burger {
+    position: relative;
+    width: 36px;
+    height: 36px;
+    background: transparent;
+    border: 2px solid purple;
+    cursor: pointer;
+
+    &-line,
+    &-line::before,
+    &-line::after {
+      position: absolute;
+      height: 3px;
+      background-color: $dark-shade-75;
+      transition: all 0.3s;
+    }
+
+    &-line {
+      top: 50%;
+      left: 50%;
+      width: 24px;
+      transform: translate(-50%, -50%);
+    }
+
+    &-line::before {
+      top: 6px;
+      width: 12px;
+      content: "";
+    }
+
+    &-line::after {
+      top: -6px;
+      left: 0;
+      width: 12px;
+      content: "";
+    }
+  }
+
+  &__burger--active {
+    .header__burger-line {
+      left: 4px;
+      transform: rotate(-45deg);
+    }
+    .header__burger-line::before {
+      transform: rotate(90deg) translatey(6px);
+    }
+    .header__burger-line::after {
+      transform: rotate(90deg) translatey(-6px);
+    }
+  }
 }
 
 .user-name {
