--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -38,6 +38,6 @@ mixin header(login)
                 .header-buttons
                   button.header__button.header__button--white войти
                   button.header__button.header__button--purple зарегистрироваться
-          button(class="header__burger header__burger--active")
+          button(class="header__burger")
             span.header__burger-line
 
