--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,6 +1,11 @@
 .header {
+  position: relative;
   background: #fff;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+
+  @media screen and (max-width: 1200px) {
+    padding: 0 15px;
+  }
 
   &__wrapper {
     display: flex;
@@ -11,6 +16,26 @@
   &__navigation-list {
     display: flex;
     align-items: center;
+
+    @media screen and (max-width: 900px) {
+      position: fixed;
+      top: 0;
+      right: 0;
+      left: 0;
+      z-index: 2;
+      flex-direction: column;
+      justify-content: space-around;
+      width: 100%;
+      height: 100vh;
+      background: #fff;
+      visibility: hidden;
+      opacity: 0;
+      transition: all 0.3s ease-in-out;
+      &--active {
+        visibility: visible;
+        opacity: 1;
+      }
+    }
   }
 
   &__navigation-item {
@@ -19,6 +44,10 @@
 
   &__navigation-item:not(:last-child) {
     margin-right: 23px;
+
+    @media screen and (max-width: 900px) {
+      margin: 0;
+    }
   }
 
   &__navigation-link {
@@ -30,6 +59,10 @@
     font-style: normal;
     line-height: 17px;
     cursor: pointer;
+
+    @media screen and (max-width: $phoneWidth) {
+      font-size: 18px;
+    }
 
     &--expand {
       padding-right: 17px;
@@ -61,6 +94,7 @@
     &--active {
       position: absolute;
       left: 0;
+      z-index: 2;
       display: block;
       background-color: #fff;
     }
@@ -73,8 +107,18 @@
   &-buttons {
     display: flex;
 
+    @media screen and (max-width: 900px) {
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+    }
+
     .header__button:first-child {
       margin-right: 20px;
+
+      @media screen and (max-width: 900px) {
+        margin-bottom: 20px;
+      }
     }
   }
 
@@ -84,11 +128,13 @@
     font-size: 12px;
     font-family: "Montserrat" sans-serif;
     font-style: normal;
-    line-height: 15px;
+    line-height: 1.2;
     text-transform: uppercase;
     border-radius: 22px;
     cursor: pointer;
-
+    @media screen and (max-width: $phoneWidth) {
+      font-size: 18px;
+    }
     &--white {
       color: $purple-color;
       background: none;
@@ -107,11 +153,16 @@
 
   &__burger {
     position: relative;
+    z-index: 20;
+    display: none;
     width: 36px;
     height: 36px;
     background: transparent;
-    border: 2px solid purple;
     cursor: pointer;
+
+    @media screen and (max-width: 900px) {
+      display: block;
+    }
 
     &-line,
     &-line::before,
@@ -177,4 +228,7 @@
     transform: translateY(50%);
     content: "";
   }
+}
+
+@media screen and (max-width: 900px) {
 }
