--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -76,6 +76,7 @@
     font-family: "Montserrat", sans-serif;
     font-style: normal;
     line-height: 17px;
+    text-align: center;
   }
 
   &__wrapper {
