make reservation form adaptive

--- a/src/components/reservation-form/reservation-form.pug
+++ b/src/components/reservation-form/reservation-form.pug
@@ -29,7 +29,7 @@ mixin reservation-form(luxury)
           span.reservation-form__prices-item-price 0₽
         .reservation-form__prices-item
           .reservation-form__prices-item-text
-            p Сбор за дополнительные услугии
+            p Сбор за дополнительные услуги
             .reservation-form__prices-item-info
               img(class="reservation-form__info-icon" src="/assets/img/reservation-form/info.svg", alt="icon")
               span.reservation-form__tooltip подсказка
