--- a/src/components/reservation-form/reservation-form.scss
+++ b/src/components/reservation-form/reservation-form.scss
@@ -22,7 +22,7 @@
     font-size: 14px;
     font-family: "Montserrat", sans-serif;
     font-style: normal;
-    line-height: 17px;
+    line-height: 1.2;
   }
 
   &__luxury-text {
@@ -41,7 +41,7 @@
     font-size: 12px;
     font-family: "Montserrat", sans-serif;
     font-style: normal;
-    line-height: 18px;
+    line-height: 1.5;
   }
   &__price-per-day {
     align-self: end;
@@ -50,7 +50,7 @@
     font-size: 14px;
     font-family: "Montserrat", sans-serif;
     font-style: normal;
-    line-height: 18px;
+    line-height: 1.3;
   }
 
   &__prices {
@@ -60,18 +60,24 @@
   &__prices-item {
     display: flex;
     justify-content: space-between;
-    @extend %body-text;
+    color: $dark-shade-50;
+    font-weight: 400;
+    font-size: 14px;
+    font-family: "Montserrat", sans-serif;
+    font-style: normal;
+    line-height: 1.2;
   }
 
   &__prices-item:not(:last-child) {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
 
   &__prices-item-text {
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    width: 239px;
+    width: 100%;
+    max-width: 239px;
     word-wrap: break-word;
   }
 
@@ -116,6 +122,8 @@
   }
 
   &__date-dropdown {
+    width: 100%;
+    max-width: 320px;
     margin-bottom: 20px;
   }
 
