--- a/src/components/input/input-text/input-text.scss
+++ b/src/components/input/input-text/input-text.scss
@@ -2,7 +2,7 @@
   max-width: 320px;
 
   &__input {
-    width: 320px;
+    max-width: 320px;
     height: 44px;
     padding-left: 15px;
     border: 1px solid $dark-shade-25;
