--- a/src/assets/scss/modules/room-details.scss
+++ b/src/assets/scss/modules/room-details.scss
@@ -1,9 +1,14 @@
 .room-details {
   &__pictures {
     display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(2, auto);
+    grid-template-columns: repeat(3, auto);
     margin-bottom: 70px;
+
+    @media screen and (max-width: $phoneWidth) {
+      grid-template-rows: repeat(3, auto);
+      grid-template-columns: repeat(1, auto);
+    }
   }
 
   &__picture img {
@@ -16,16 +21,31 @@
   &__picture:nth-child(1n) {
     grid-row: 1 / 3;
     grid-column: 1 / 3;
+
+    @media screen and (max-width: $phoneWidth) {
+      grid-row: 1 / 2;
+      grid-column: 1;
+    }
   }
 
   &__picture:nth-child(2n) {
     grid-row: 1 / 2;
     grid-column: 3 / 4;
+
+    @media screen and (max-width: $phoneWidth) {
+      grid-row: 2 / 3;
+      grid-column: 1;
+    }
   }
 
   &__picture:nth-child(3n) {
     grid-row: 2 / 3;
     grid-column: 3 / 4;
+
+    @media screen and (max-width: $phoneWidth) {
+      grid-row: 3 / 4;
+      grid-column: 1;
+    }
   }
 
   &__title {
@@ -36,15 +56,33 @@
     display: grid;
     grid-row-gap: 35px;
     grid-column-gap: 70px;
-    grid-template-rows: auto auto auto;
-    grid-template-columns: 291px 349px 380px;
-    justify-content: left;
+    grid-template-rows: repeat(3, auto);
+    grid-template-columns: minmax(250px, 291px) minmax(300px, 349px) 380px;
+    justify-items: left;
     margin-bottom: 70px;
+
+    @media screen and (max-width: $smDesktopWidth) {
+      grid-column-gap: 10px;
+      grid-template-rows: repeat(4, auto);
+      grid-template-columns: 1fr 1fr;
+      justify-items: center;
+    }
+
+    @media screen and (max-width: $phoneWidth) {
+      grid-template-rows: repeat(6, auto);
+      grid-template-columns: 1fr;
+      justify-items: left;
+    }
   }
 
   &__about-room {
     grid-row: 1 / 2;
     grid-column: 1 / 2;
+
+    @media screen and (max-width: $phoneWidth) {
+      grid-row: 1 / 2;
+      grid-column: 1;
+    }
   }
 
   &__about-room-container {
@@ -61,6 +99,11 @@
     grid-row: 2 / 3;
     grid-column: 1 / 3;
     max-width: 712px;
+
+    @media screen and (max-width: $phoneWidth) {
+      grid-row: 3 / 4;
+      grid-column: 1;
+    }
   }
 
   &__reveiw-title {
@@ -77,18 +120,17 @@
     font-family: "Montserrat", sans-serif;
     font-style: normal;
     line-height: 14px;
+    text-align: center;
   }
-
-  // &__rules {
-  //   display: flex;
-  //   justify-content: space-between;
-  //   max-width: 703px;
-  //   margin-bottom: 70px;
-  // }
 
   &__bullet-list {
     grid-row: 3 / 4;
     grid-column: 1 / 2;
+
+    @media screen and (max-width: $phoneWidth) {
+      grid-row: 5 / 6;
+      grid-column: 1;
+    }
   }
 
   &__bullet-list-title {
@@ -100,6 +142,11 @@
     grid-row: 3 / 4;
     grid-column: 2 / 3;
     max-width: 341px;
+
+    @media screen and (max-width: $phoneWidth) {
+      grid-row: 4 / 5;
+      grid-column: 1;
+    }
   }
 
   &__cancel-title {
@@ -114,6 +161,11 @@
     grid-row: 1 / 2;
     grid-column: 2 / 3;
 
+    @media screen and (max-width: $phoneWidth) {
+      grid-row: 2 / 3;
+      grid-column: 1;
+    }
+
     &-title {
       margin-bottom: 20px;
     }
@@ -122,5 +174,16 @@
   &__reservation {
     grid-row: 1 / 3;
     grid-column: 3 / 4;
+    width: 100%;
+
+    @media screen and (max-width: $smDesktopWidth) {
+      grid-row: 4 / 5;
+      grid-column: 1 / 4;
+    }
+
+    @media screen and (max-width: $phoneWidth) {
+      grid-row: 6 / 7;
+      grid-column: 1;
+    }
   }
 }
