--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,10 +3,6 @@
   background: #fff;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 
-  @media screen and (max-width: 1200px) {
-    padding: 0 15px;
-  }
-
   &__wrapper {
     display: flex;
     align-items: center;
@@ -17,7 +13,7 @@
     display: flex;
     align-items: center;
 
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: $smDesktopWidth) {
       position: fixed;
       top: 0;
       right: 0;
@@ -45,7 +41,7 @@
   &__navigation-item:not(:last-child) {
     margin-right: 23px;
 
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: $smDesktopWidth) {
       margin: 0;
     }
   }
@@ -107,7 +103,7 @@
   &-buttons {
     display: flex;
 
-    @media screen and (max-width: 900px) {
+    @media screen and (max-width: $smDesktopWidth) {
       flex-direction: column;
       align-items: center;
       margin: 0;
@@ -116,7 +112,8 @@
     .header__button:first-child {
       margin-right: 20px;
 
-      @media screen and (max-width: 900px) {
+      @media screen and (max-width: $smDesktopWidth) {
+        margin-right: 0;
         margin-bottom: 20px;
       }
     }
