--- a/src/pug/pages/room-details.pug
+++ b/src/pug/pages/room-details.pug
@@ -49,5 +49,5 @@ block content
           p.room-details__cancel-text
             |Бесплатная отмена в течение 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
         .room-details__reservation
-          +reservation-form()
+          +reservation-form('luxury')
           
