--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -46,7 +46,7 @@
     max-width: 320px;
     height: 44px;
     color: #fff;
-    background: url("/assets/img/button/arrow.svg") 95% 50% no-repeat,
+    background: url("/assets/img/arrow.svg") 95% 50% no-repeat,
       linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
     border-radius: 22px;
   }
