--- a/src/assets/scss/modules/form-elements.scss
+++ b/src/assets/scss/modules/form-elements.scss
@@ -71,6 +71,10 @@
     grid-auto-rows: 1fr;
     row-gap: 40px;
   }
+
+  &__pagination {
+    margin-bottom: 50px;
+  }
 }
 
 .text-field__wrapper {
