--- a/src/pug/pages/form-elements.pug
+++ b/src/pug/pages/form-elements.pug
@@ -5,6 +5,7 @@ include /components/input/checkbox/checkbox
 include /components/input/radio/radio
 include /components/input/toggle/toggle
 include /components/button-like/button-like
+include /components/pagination/pagination
 include /components/rate-button/rate-button
 include /components/bullet-list/bullet-list
 include /components/about-room/about-room
@@ -87,6 +88,9 @@ block content
           button.button click me
           button.button(disabled) click me
         button.button.button--arrow перейти к оплате
+      .form-elements__pagination
+        h3.form-elements__title pagination
+        +pagination()
       .form-elements__inner
         h3.form-elements__title bullet list
         +bullet-list(["Нельзя с питомцами", "Без вечеринок и мероприятий", "Время прибытия — после 13:00, а выезд до 12:00"])
