--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,6 +10,7 @@
 @import "~components/input/toggle/toggle.scss";
 @import "~components/input/masked-text/masked-text.scss";
 @import "~components/button-like/button-like.scss";
+@import "~components/pagination/pagination.scss";
 @import "~components/rate-button/rate-button.scss";
 @import "~components/button/button.scss";
 @import "~components/bullet-list/bullet-list.scss";
