--- a/src/assets/scss/modules/landing-page.scss
+++ b/src/assets/scss/modules/landing-page.scss
@@ -6,6 +6,10 @@
     display: grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
+
+    @media screen and (max-width: $tableWidth) {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__search-form {
@@ -21,5 +25,9 @@
     margin-bottom: 18px;
     text-align: right;
     @extend %body-text;
+
+    @media screen and (max-width: $tableWidth) {
+      grid-column: 1;
+    }
   }
 }
