add sign in page

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -35,5 +35,6 @@
 @import "modules/cards.scss";
 @import "modules/landing-page.scss";
 @import "modules/registration.scss";
+@import "modules/sign-in.scss";
 @import "modules/search-room.scss";
 @import "modules/room-details.scss";
