--- a/src/components/input/masked-text/masked-text.scss
+++ b/src/components/input/masked-text/masked-text.scss
@@ -2,7 +2,8 @@
   max-width: 320px;
 
   &__input {
-    width: 320px;
+    width: 100%;
+    max-width: 320px;
     height: 44px;
     padding-left: 15px;
     border: 1px solid $dark-shade-25;
