--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -84,19 +84,25 @@
 
   &__navigation-dropdown {
     display: none;
-    width: 110px;
-    padding: 0px 5px;
+    width: 120px;
+    padding: 0 5px 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
 
     &--active {
       position: absolute;
-      left: 0;
+      left: 50%;
       z-index: 2;
-      display: block;
+      display: flex;
+      flex-direction: column;
       background-color: #fff;
+      transform: translateX(-50%);
     }
 
     li {
-      margin-top: 5px;
+      margin-top: 10px;
+      text-align: center;
     }
   }
 
