--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -8,32 +8,32 @@ mixin header(login)
         nav.header__navigation
           ul.header__navigation-list
             li.header__navigation-item
-              a(class="header__navigation-link" href="#") О нас
+              a(class="header__navigation-link" href="/mock-address") О нас
             li.header__navigation-item
-              p(class="header__navigation-link header__navigation-link--expand" href="#") Услуги
+              p(class="header__navigation-link header__navigation-link--expand" href="/mock-address") Услуги
               ul.header__navigation-dropdown
                 li
-                  a(class="header__navigation-link" href="#") Услуга 1
+                  a(class="header__navigation-link" href="/mock-address") Услуга 1
                 li
-                  a(class="header__navigation-link" href="#") Услуга 2
+                  a(class="header__navigation-link" href="/mock-address") Услуга 2
                 li
-                  a(class="header__navigation-link" href="#") Услуга 3
+                  a(class="header__navigation-link" href="/mock-address") Услуга 3
                 li
-                  a(class="header__navigation-link" href="#") Услуга 4
+                  a(class="header__navigation-link" href="/mock-address") Услуга 4
             li.header__navigation-item
-              a(class="header__navigation-link" href="#") Вакансии
+              a(class="header__navigation-link" href="/mock-address") Вакансии
             li.header__navigation-item
-              a(class="header__navigation-link" href="#") Новости
+              a(class="header__navigation-link" href="/mock-address") Новости
             li.header__navigation-item
-              p(class="header__navigation-link header__navigation-link--expand" href="#") Соглашения
+              p(class="header__navigation-link header__navigation-link--expand" href="/mock-address") Соглашения
               ul.header__navigation-dropdown
                 li
-                  a(class="header__navigation-link" href="#") Соглашение 1
+                  a(class="header__navigation-link" href="/mock-address") Соглашение 1
                 li
-                  a(class="header__navigation-link" href="#") Соглашение 2
+                  a(class="header__navigation-link" href="/mock-address") Соглашение 2
             li.header__navigation-item
               if login
-                a(class="user-name" href="#") Юлий Цезарь
+                a(class="user-name" href="/mock-address") Юлий Цезарь
               else
                 .header-buttons
                   button.header__button.header__button--white войти
