--- a/src/components/room-card/room-card.pug
+++ b/src/components/room-card/room-card.pug
@@ -18,7 +18,7 @@ mixin room-card(obj)
           img(src="/assets/img/room-card/img/arrow.svg", alt="button-right")
     .room-card__inner
       .room-card__info
-        a(class="room-card__room-number" href="#")
+        a(class="room-card__room-number" href="/room-details.html")
           span.room-card__room-number-sign № 
           span= number
           if luxury
@@ -28,6 +28,6 @@ mixin room-card(obj)
           span.room-card__price-per-day-text  в сутки
       .room-card__rating
         +rate-button(star)
-        a(class="room-card__reviews" href="#")
+        a(class="room-card__reviews" href="/room-details.html")
           span= rewiews
           span.room-card__rewiews-text  Отзывов
