--- a/src/components/login-form/login-form.pug
+++ b/src/components/login-form/login-form.pug
@@ -12,4 +12,4 @@ mixin login-form()
         button.button.button--arrow войти
       .login-form__login
         span.login-form__text Нет аккаунта на Toxin?
-        button.button.button--white создать
+        a(class="button button--white" href="/registration.html") создать
