--- a/src/components/registration-form/registration-form.pug
+++ b/src/components/registration-form/registration-form.pug
@@ -27,4 +27,4 @@ mixin registration-form()
         button.button.button--arrow перейти к оплате
       .registration-form__login
         span.registration-form__text Уже есть аккаунт на Toxin
-        button.button.button--white войти
+        a(class="button button--white" href="/sign-in.html") войти
