--- a/src/components/date-filter/date-filter.pug
+++ b/src/components/date-filter/date-filter.pug
@@ -3,5 +3,5 @@ mixin date-filter(label)
     p.dropdown__label= label
     .dropdown__header
         input(class='dropdown__text' readonly placeholder='asdasd')
-        button.dropdown__button
+        button(class="ropdown__button" type="button")
           img(src="/assets/img/dropdown/expand-more.svg", alt="")
