add padding for button

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -30,8 +30,9 @@
 
   &--white {
     width: 99px;
-    height: 44px;
+    padding: 12px 0;
     color: $purple-color;
+    text-align: center;
     border: 2px solid;
     border-radius: 22px;
 
