--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -29,12 +29,12 @@
 @import "~components/login-form/login-form.scss";
 @import "~components/room-card/room-card.scss";
 @import "~components/chart/chart.scss";
-@import "modules/colors&types.scss";
-@import "modules/form-elements.scss";
-@import "modules/headers&footers.scss";
-@import "modules/cards.scss";
-@import "modules/landing-page.scss";
-@import "modules/registration.scss";
-@import "modules/sign-in.scss";
-@import "modules/search-room.scss";
-@import "modules/room-details.scss";
+@import "pages/colors&types.scss";
+@import "pages/form-elements.scss";
+@import "pages/headers&footers.scss";
+@import "pages/cards.scss";
+@import "pages/landing-page.scss";
+@import "pages/registration.scss";
+@import "pages/sign-in.scss";
+@import "pages/search-room.scss";
+@import "pages/room-details.scss";
