--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -1,21 +1,20 @@
-mixin dropdown(label, arr)
-  .dropdown
+mixin dropdown(obj)
+  -var {label, items, type, holder} = obj
+  div(class=`dropdown ${type}`)
     p.dropdown__label= label
     .dropdown__header
-      input(class='dropdown__text' readonly placeholder='asdasd')
+      input(class="dropdown__text" readonly placeholder=holder)
       button(class="dropdown__button" type="button")
         img(src="/assets/img/dropdown/expand-more.svg", alt="")
     .dropdown__inner
-      ul(class="dropdown__list" data-dropdown-type="guests")
-        each el in arr
+      ul(class="dropdown__list")
+        each el in items
           li(class="dropdown__item" data-type=el)
             span.dropdown__item-text= el
             .dropdown__item-inner
-              button(class="dropdown__item-button button" type="button" data-button="minus")
-                img(src="/assets/img/dropdown/minus.png", alt="minus")
+              button(class="dropdown__item-button dropdown__item-button--minus button" type="button" data-button="minus")
               span.dropdown__item-amount 0
-              button(class="dropdown__item-button button" type="button" data-button="plus")
-                img(src="/assets/img/dropdown/plus.png", alt="plus")
+              button(class="dropdown__item-button dropdown__item-button--plus button" type="button" data-button="plus")
       .dropdown__buttons
-        button.button очистить
-        button.button применить
+        button(class="button js-button-clear" type="button") очистить
+        button(class="button dropdown__button-apply js-button-apply" type="button") применить
