--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -15,7 +15,8 @@
   &__text {
     width: 100%;
     height: 44px;
-    padding: 0 44px 0 15px;
+    padding: 0 87px 0 15px;
+    text-overflow: ellipsis;
     border: 1px solid $dark-shade-25;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
@@ -61,14 +62,36 @@
       margin-bottom: 7px;
     }
 
+    &-inner {
+      display: grid;
+      grid-template-columns: 1fr 10px 1fr;
+      align-items: center;
+      justify-items: center;
+      column-gap: 10px;
+    }
+
     &-amount {
       padding: 0 12px;
       vertical-align: middle;
     }
 
     &-button {
+      width: 30px;
+      height: 30px;
       border-radius: 50%;
       cursor: pointer;
+
+      &--minus {
+        background-image: url('/assets/img/dropdown/minus.png');
+      }
+
+      &--plus {
+        background-image: url('/assets/img/dropdown/plus.png');
+      }
+
+      &:disabled {
+        opacity: 0.3;
+      }
     }
   }
 
@@ -79,6 +102,10 @@
     height: 100%;
     background: none;
     cursor: pointer;
+  }
+
+  &__button-apply {
+    margin-left: auto;
   }
 
   &__buttons {
