--- a/src/components/reservation-form/reservation-form.pug
+++ b/src/components/reservation-form/reservation-form.pug
@@ -15,7 +15,7 @@ mixin reservation-form(luxury)
       .reservation-form__date-dropdown
         +date-dropdown('прибытие', 'выезд')
       .reservation-form__dropdown
-        +dropdown('гости', ['взрослые', 'дети', 'младенцы'])
+        +dropdown({label: 'гости', items:['взрослые', 'дети', 'младенцы'], type:'js-guest', holder: 'Cколько гостей'})
       .reservation-form__prices
         .reservation-form__prices-item
           span.reservation-form__prices-item-text 9 990₽ х 4 суток
