--- a/src/pug/pages/search-room.pug
+++ b/src/pug/pages/search-room.pug
@@ -30,7 +30,7 @@ block content
         .search-room__date-filter
           +date-filter('даты пребывания в отеле')
         .search-room__guest
-          +dropdown('гости', ['взрослые', 'дети', 'младенцы'])
+          +dropdown({label: 'гости', items: ['взрослые', 'дети', 'младенцы'], type: 'js-guest', holder: 'Cколько гостей'})
         .search-room__range-slider
           +range-slider('диапазон цены', 'Стоимость за сутки пребывания в номере')
         .search-room__checkbox
@@ -43,7 +43,7 @@ block content
           +checkbox('Широкий коридор', 'Ширина коридоров в номере не менее 91 см.')
           +checkbox('Помощник для инвалидов', 'На 1 этаже вас встретит специалист  и проводит до номера.')
         .search-room__comfort
-          +dropdown('удобства номера', ['взрослые', 'дети', 'младенцы'])
+          +dropdown({label: 'удобства номера', items: ['спальни', 'кровати', 'ванные комнаты'], type: 'js-comfort', holder: 'Удобства'})
         .search-room_expandable-checkbox
           +expandable-checkbox-list('дополнительные удобства')
       .search-room__search-results
