--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -2,6 +2,7 @@
   max-width: 150px;
 
   &__wrapper {
+    position: relative;
     display: flex;
     justify-content: space-between;
   }
@@ -13,5 +14,88 @@
     height: 100%;
     background: none;
     cursor: pointer;
+  }
+}
+
+.calendar {
+  position: absolute;
+  top: 70px;
+  z-index: 5;
+  max-width: 320px;
+  padding: 20px;
+  font-size: 12px;
+  font-family: $mainFont;
+  background-color: #fff;
+  border: 1px solid $dark-shade-25;
+  border-radius: 4px;
+  box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+
+  &__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 30px;
+  }
+
+  &__date {
+    font-weight: 700;
+    font-size: 19px;
+    line-height: 1.2;
+  }
+
+  &__week {
+    display: flex;
+    align-items: center;
+
+    &-day {
+      display: inline-block;
+      width: 14.2%;
+      height: 40px;
+      color: $purple-color;
+      font-weight: bold;
+      line-height: 40px;
+      text-align: center;
+    }
+  }
+
+  &__days-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  &__day {
+    display: inline-block;
+    width: 14.2%;
+    height: 40px;
+    color: $dark-shade-25;
+    font-size: 12px;
+    font-family: $mainFont;
+    line-height: 40px;
+    text-align: center;
+
+    &--active {
+      color: $dark-shade-50;
+    }
+
+    &--today {
+      color: #fff;
+      background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
+      border-radius: 50%;
+    }
+  }
+
+  &__button {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+
+    &--prev {
+      background: url('/assets/img/date-dropdown/arrow_back.svg') no-repeat center;
+    }
+
+    &--next {
+      background: url('/assets/img/date-dropdown/arrow_back.svg') no-repeat center;
+      transform: scale(-1, 1);
+    }
   }
 }
