--- a/src/components/date-filter/date-filter.pug
+++ b/src/components/date-filter/date-filter.pug
@@ -1,7 +1,7 @@
 mixin date-filter(label)
-  .date-filter
+  .date-filter.js-date-dropdown
     p.dropdown__label= label
-    .dropdown__header
-        input(class='dropdown__text' readonly placeholder='asdasd')
-        button(class="dropdown__button" type="button")
+      .dropdown__header   
+        input(class='dropdown__text js-date-input' readonly placeholder='asdasd')
+        button(class="dropdown__button js-expand-button" type="button")
           img(src="/assets/img/dropdown/expand-more.svg", alt="")
