--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -99,7 +99,7 @@
     color: $dark-shade-100;
     font-weight: 700;
     font-size: 19px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 23px;
   }
@@ -107,7 +107,7 @@
   &__room-number-sign {
     font-weight: 700;
     font-size: 14px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 17px;
   }
@@ -128,7 +128,7 @@
     color: $dark-shade-50;
     font-weight: 700;
     font-size: 14px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 18px;
   }
@@ -138,7 +138,7 @@
     color: $dark-shade-50;
     font-weight: 400;
     font-size: 12px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 18px;
   }
