--- a/src/assets/scss/pages/colors&types.scss
+++ b/src/assets/scss/pages/colors&types.scss
@@ -1,5 +1,5 @@
-@import "../utils/vars.scss";
-@import "../utils/font-template.scss";
+@import '../utils/vars.scss';
+@import '../utils/font-template.scss';
 
 body {
   background-color: #fff;
