--- a/src/assets/scss/pages/registration.scss
+++ b/src/assets/scss/pages/registration.scss
@@ -4,8 +4,7 @@
   justify-content: center;
   min-height: 683px;
   padding: 0 20px;
-  background: center 100% / cover no-repeat
-    url("/assets/img/backgrounds/registration-bg.jpg");
+  background: center 100% / cover no-repeat url('/assets/img/backgrounds/registration-bg.jpg');
 
   &__registration-form {
     width: 100%;
