--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -14,7 +14,7 @@
       height: 10px;
       background-color: $dark-shade-25;
       border-radius: 50%;
-      content: "";
+      content: '';
     }
 
     &:not(:last-child) {
