--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,4 +1,4 @@
-@import "utils/fonts";
+@import 'utils/fonts';
 .footer {
   background-color: #fff;
   border-top: 1px solid #b3b3bc;
@@ -17,7 +17,7 @@
     color: $dark-shade-50;
     font-weight: 400;
     font-size: 14px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 17px;
   }
@@ -27,7 +27,7 @@
     color: $dark-shade-100;
     font-weight: 700;
     font-size: 12px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 15px;
     text-transform: uppercase;
@@ -42,7 +42,7 @@
     color: $dark-shade-75;
     font-weight: 400;
     font-size: 14px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 24px;
   }
@@ -73,7 +73,7 @@
     color: $dark-shade-75;
     font-weight: 400;
     font-size: 14px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 17px;
     text-align: center;
