--- a/src/components/input/toggle/toggle.scss
+++ b/src/components/input/toggle/toggle.scss
@@ -39,7 +39,7 @@
       background: $dark-shade-25;
       border-radius: 50%;
       transition: all 0.2s ease-in-out;
-      content: "";
+      content: '';
     }
   }
 }
