--- a/src/assets/scss/pages/landing-page.scss
+++ b/src/assets/scss/pages/landing-page.scss
@@ -1,6 +1,5 @@
 .landing-page {
-  background: center / cover no-repeat
-    url("/assets/img/backgrounds/landing-page-bg.jpg");
+  background: center / cover no-repeat url('/assets/img/backgrounds/landing-page-bg.jpg');
 
   &__wrapper {
     display: grid;
