--- a/src/assets/scss/utils/fonts.scss
+++ b/src/assets/scss/utils/fonts.scss
@@ -2,20 +2,20 @@
 // see more: https://github.com/vedees/webpack-template/blob/master/README.md#import-js-files
 @font-face {
   font-weight: 700;
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   font-style: normal;
-  src: url("/assets/fonts/montserrat-bold-webfont.woff2") format("woff2"),
-    url("/assets/fonts/montserrat-bold-webfont.woff") format("woff"),
-    url("/assets/fonts/montserrat-bold-webfont.ttf") format("truetype"),
-    url("/assets/fonts/montserrat-bold-webfont.svg#Montserrat") format("svg");
+  src: url('/assets/fonts/montserrat-bold-webfont.woff2') format('woff2'),
+    url('/assets/fonts/montserrat-bold-webfont.woff') format('woff'),
+    url('/assets/fonts/montserrat-bold-webfont.ttf') format('truetype'),
+    url('/assets/fonts/montserrat-bold-webfont.svg#Montserrat') format('svg');
 }
 
 @font-face {
   font-weight: 400;
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   font-style: normal;
-  src: url("/assets/fonts/montserrat-regular-webfont.woff2") format("woff2"),
-    url("/assets/fonts/montserrat-regular-webfont.woff") format("woff"),
-    url("/assets/fonts/montserrat-regular-webfont.ttf") format("truetype"),
-    url("/assets/fonts/montserrat-regular-webfont.svg#Montserrat") format("svg");
+  src: url('/assets/fonts/montserrat-regular-webfont.woff2') format('woff2'),
+    url('/assets/fonts/montserrat-regular-webfont.woff') format('woff'),
+    url('/assets/fonts/montserrat-regular-webfont.ttf') format('truetype'),
+    url('/assets/fonts/montserrat-regular-webfont.svg#Montserrat') format('svg');
 }
