--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -66,7 +66,7 @@
     height: 10px;
     border-radius: 50%;
     transform: translateY(50%);
-    content: "";
+    content: '';
   }
 
   &__legend-item:nth-child(1)::before {
