--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -51,7 +51,7 @@
     color: $dark-shade-50;
     font-weight: 400;
     font-size: 14px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 17px;
     cursor: pointer;
@@ -73,7 +73,7 @@
       border-top: 2px solid $dark-shade-75;
       border-right: 2px solid $dark-shade-75;
       transform: rotate(135deg);
-      content: "";
+      content: '';
     }
 
     img {
@@ -129,7 +129,7 @@
     padding: 10px 20px;
     font-weight: 700;
     font-size: 12px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 1.2;
     text-transform: uppercase;
@@ -186,14 +186,14 @@
     &-line::before {
       top: 6px;
       width: 12px;
-      content: "";
+      content: '';
     }
 
     &-line::after {
       top: -6px;
       left: 0;
       width: 12px;
-      content: "";
+      content: '';
     }
   }
 
@@ -217,7 +217,7 @@
   color: $dark-shade-50;
   font-weight: 400;
   font-size: 14px;
-  font-family: "Montserrat" sans-serif;
+  font-family: 'Montserrat' sans-serif;
   font-style: normal;
   line-height: 17px;
 
@@ -229,6 +229,6 @@
     height: 30px;
     background-color: #e9e9ec;
     transform: translateY(50%);
-    content: "";
+    content: '';
   }
 }
