--- a/src/components/registration-form/registration-form.scss
+++ b/src/components/registration-form/registration-form.scss
@@ -42,7 +42,7 @@
     color: #000;
     font-weight: 400;
     font-size: 14px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 18px;
   }
