--- a/src/components/reservation-form/reservation-form.scss
+++ b/src/components/reservation-form/reservation-form.scss
@@ -20,7 +20,7 @@
   &__room-number-sign {
     font-weight: 700;
     font-size: 14px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 1.2;
   }
@@ -39,7 +39,7 @@
     color: $dark-shade-50;
     font-weight: 400;
     font-size: 12px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 1.5;
   }
@@ -48,7 +48,7 @@
     color: $dark-shade-50;
     font-weight: 700;
     font-size: 14px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 1.3;
   }
@@ -63,7 +63,7 @@
     color: $dark-shade-50;
     font-weight: 400;
     font-size: 14px;
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     line-height: 1.2;
   }
@@ -117,7 +117,7 @@
       left: 5px;
       width: calc(100% - 10px);
       border-bottom: 1px dashed $dark-shade-25;
-      content: "";
+      content: '';
     }
   }
 
