--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -114,7 +114,7 @@
       border-radius: 50%;
     }
 
-    &--selected-bg::before {
+    &--range::before {
       position: absolute;
       display: block;
       width: 100%;
@@ -125,29 +125,14 @@
       content: '';
     }
 
-    // &--selected-bg::before ~ &--selected-bg::before {
-    //   position: absolute;
-    //   display: block;
-    //   width: 100%;
-    //   height: 100%;
-    //   color: #fff;
-    //   background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
-    //   border-radius: 50%;
-    //   opacity: 0.25;
-    //   content: '';
-    // }
+    &--range-first::before {
+      right: 0;
+      width: 50%;
+    }
 
-    &--selected-bg:nth-child() {
-      // position: absolute;
-      // top: 0;
-      // z-index: 100;
-      // display: block;
-      // width: 100%;
-      // height: 100%;
-      // color: green;
-      background: green;
-      // opacity: 0.25;
-      // content: 'jj';
+    &--range-last::before {
+      left: 0;
+      width: 50%;
     }
   }
 
