--- a/src/components/date-filter/date-filter.pug
+++ b/src/components/date-filter/date-filter.pug
@@ -2,6 +2,6 @@ mixin date-filter(label)
   .date-filter.js-date-dropdown
     p.dropdown__label= label
       .dropdown__header   
-        input(class='dropdown__text js-date-input' readonly placeholder='asdasd')
+        input(class='dropdown__text js-date-input' readonly placeholder='Выберите дату')
         button(class="dropdown__button js-expand-button" type="button")
           img(src="/assets/img/dropdown/expand-more.svg", alt="")
