--- a/src/pug/pages/landing-page.pug
+++ b/src/pug/pages/landing-page.pug
@@ -1,7 +1,7 @@
 extends /pug/layouts/main
 include /components/search-form/search-form
 block variables
-  -var title = "Landing page"
+  -var title = "Toxin - Главная"
 block content
   .landing-page
     .container
