--- a/src/pug/pages/registration.pug
+++ b/src/pug/pages/registration.pug
@@ -1,7 +1,7 @@
 extends /pug/layouts/main
 include /components/registration-form/registration-form
 block variables
-  -var title = "Registration"
+  -var title = "Регистрация"
 block content
   .registration
     .registration__registration-form
