--- a/src/pug/pages/room-details.pug
+++ b/src/pug/pages/room-details.pug
@@ -5,7 +5,7 @@ include /components/bullet-list/bullet-list
 include /components/review/review
 include /components/chart/chart
 block variables
-  -var title= "Room details"
+  -var title= "Информация о номере"
   -
     var reviews = [
       {name: "Рулон Обоев", src: "/assets/img/review/4el.jpg", time: "5 дней назад", likes: "12", liked: true, comment: "Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей."},
