--- a/src/pug/pages/search-room.pug
+++ b/src/pug/pages/search-room.pug
@@ -7,7 +7,7 @@ include /components/expandable-checkbox-list/expandable-checkbox-list
 include /components/room-card/room-card
 include /components/pagination/pagination
 block variables
-  -var title= "Search room"
+  -var title= "Подбор номеров"
   -
     var cards = [
         {luxury: true, number: 888, price: "9 900₽", star: 5, rewiews: 145, images: ['room-1.jpg', 'room-2.jpg', 'room-1.jpg', 'room-2.jpg']},
