--- a/src/pug/pages/sign-in.pug
+++ b/src/pug/pages/sign-in.pug
@@ -1,7 +1,7 @@
 extends /pug/layouts/main
 include /components/login-form/login-form
 block variables
-  -var title = "Sign in"
+  -var title = "Вход"
 block content
   .login
     .login__login-form
