--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -19,11 +19,13 @@ $phoneWidth: 480px;
 $smPhoneWidth: 320px;
 
 // Main color
+
 $dark-shade-100: #1f2041;
-$dark-shade-75: #575870;
-$dark-shade-50: #8f8fa0;
-$dark-shade-25: #c7c7cf;
-$dark-shade-5: #f4f4f6;
+$dark-shade-75: rgba(31, 32, 65, 0.75);
+$dark-shade-50: rgba(31, 32, 65, 0.50);
+$dark-shade-25: rgba(31, 32, 65, 0.25);
+$dark-shade-5: rgba(31, 32, 65, 0.5);
 $purple-color: #bc9cff;
 $green-color: #6fcf97;
 $button-gradient: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+
